 - Bit more work on CMake build doc. (#318)
 - Typo in `datatypes.md`: `nullness`, not `nullness_traits`. (#353)
 - Fixed test names map in `tests/runner.cxx`. (#354)
 - Integral `from_string` now accept leading whitespace, as in composite types.
 - Parser prototype for composite types.  (#355)
 - Use `stream_from` without knowing the number of fields.  (#357)
7.1.2
 - Document build in `BUILDING-configure.md` / `BUILDING-cmake.md`.
 - Work around silly clang warning in `test_errorhandler.cxx`.
 - Fix install error with some internal headers. (#322)
 - Fix "No object selected" error message in large objects.  (#324)
 - If error has no SQLSTATE, throw `broken_connection`. (#280)
 - Fix argument order in `encrypt_password`. (#333, #334)
 - Fix underestimate of buffer size for `to_string` for floats. (#328)
7.1.1
 - Compile fix for Visual Studio.
 - Warning fix for clang.
 - Also install `transaction_focus.hxx`. (#320)
7.1.0
 - Query tuples straight into `std::tuple` using `transaction::stream()`!
 - And, `stream_from` now supports more or less arbitrary queries.
 - Instead of a tuple of fields, you can pass `stream_to` a container as well.
 - `string_traits::size_buffer()` must now be `noexcept`.
 - New `nullness` member: `always_null`.
 - There is now `to_buf` support for string literals.
 - Streaming data is now more efficient.
 - The table name in `stream_from` is now escaped.
 - You can now "convert" strings to `std::string_view`.  Mind your lifetimes!
 - A `std::variant` will now convert to string, if its member types do.
 - If a `stream_from` row fails to convert, you can no longer retry it.
 - `from_string(field const &)` now handles null values properly.
 - Obsolete Windows build docs are gone.
 - Added `row::to(std::tuple<...>)`.
 - Unified the test suites.  We no longer need `test/unit/unit_runner`.
 - New helper: `strip_t<...>` to remove a type's constness and reference.
 - Replace custom templating with CMake glob in `src/CMakeLists.txt`.